documenting more server options